--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,8 @@ on:
       - main
       - master
       - dev
+env:
+  DEVELOPER_DIR: /home/ssadmin/Desktop/WebGoat-main.zip
 jobs:
   build:
     runs-on: self-hosted
